--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,10 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Card from "../components/Card.astro";
-import Button from "../components/Button.tsx";
+import PokemonList from "../components/PokemonList.astro";
 ---
 
 <Layout title="Welcome to Astro.">
-  <main class="text-3xl text-red-400">Hey</main>
+  <main>
+    <PokemonList client:load />
+  </main>
 </Layout>
