--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,9 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import PokemonList from "../components/PokemonList.tsx";
-import Input from "../components/Input";
 import List from "../components/List.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Pokemon Sansaar.">
   <main class="px-[12.5%]">
     <List />
   </main>
