--- a/src/pages/pokemon/index.astro
+++ b/src/pages/pokemon/index.astro
@@ -1,10 +1,9 @@
 ---
-import List from "../../components/List.tsx.tsx";
-import PokemonList from "../../components/PokemonList.tsx";
+import List from "../../components/List.astro";
 import Layout from "../../layouts/Layout.astro";
 ---
 
-<Layout title="List of All Pokemons">
+<Layout title="Pokemon Sansaar | All Pokemons">
   <main class="px-[12.5%] flex items-center justify-center flex-col">
     <List />
   </main>
