--- a/src/pages/pokemon/[name].astro
+++ b/src/pages/pokemon/[name].astro
@@ -1,18 +1,15 @@
 ---
-import type { GetStaticPaths } from "astro";
-import { Image } from "astro:assets";
 import Layout from "../../layouts/Layout.astro";
 import PokemonTab from "../../components/PokemonTab";
 
-const { href, name } = Astro.params;
-// const { name } = Astro.props;
+const { name } = Astro.params;
 
 export async function getStaticPaths() {
-  const data = await fetch("https://pokeapi.co/api/v2/pokemon?limit=100000&offset=0").then(
-    (response) => response.json()
-  );
+  const data = await fetch(
+    "https://pokeapi.co/api/v2/pokemon?limit=100000&offset=0"
+  ).then((response) => response.json());
 
-  return data.results.map((pokemon) => {
+  return data.results.map((pokemon: { name: string }) => {
     return {
       params: { name: pokemon.name },
       props: { pokemon },
@@ -24,17 +21,18 @@ const response = await fetch(`https://pokeapi.co/api/v2/pokemon/${name}`);
 const pokemon = await response.json();
 
 const pokemonInfo = Object.entries(pokemon)
-  .filter(([key, value]) => typeof value !== "object")
+  .filter(([_key, value]) => typeof value !== "object")
   .filter(
-    ([key, value]) => key !== "location_area_encounters" && key !== "is_default"
+    ([key, _value]) =>
+      key !== "location_area_encounters" && key !== "is_default"
   );
 
 const pokemonAbilities = pokemon.abilities;
 const pokemonStats = pokemon.stats;
 ---
 
-<Layout title="Welcome to Astro.">
-  <main class="px-[12.5%] mt-16 flex">
+<Layout title={`Pokemon Sanssar | ${name}`}>
+  <main class="px-[12.5%] mt-16 flex flex-wrap md:flex-nowrap gap-4">
     <div class="grid grid-cols-2 gap-2 w-full">
       {
         Object.entries(pokemon.sprites)
