--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -17,7 +17,7 @@ const links = [
     {
       links.map(({ href, link }) => (
         <li>
-          <a href={href}>{link}</a>
+          <a href={`/${href}`}>{link}</a>
         </li>
       ))
     }
